update task  solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,7 +36,7 @@ $gap: 1px;
 }
 
 @for $i from 1 to 32 {
-  .calendar :nth-child(#{$i}):after {
+  .calendar :nth-child(#{$i})::before {
     content: '#{$i}';
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
