--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,66 @@
+$padding: 10px;
+$gap-size: 1px;
+$day-size: 100px;
+$calendar-width: (7 * $day-size) + ($padding * 2) + (6 * $gap-size);
+$days: 'mon', 'tue', 'wed', 'thu', 'fri', 'sat', 'sun';
+
 body {
   margin: 0;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: $gap-size;
+  padding: $padding;
+  width: $calendar-width;
+  margin: auto;
+
+  &__day {
+    position: relative;
+    background-color: #eee;
+    box-sizing: border-box;
+    width: $day-size;
+    height: 100px;
+    border: 1px solid black;
+    transition: transform 0.5s;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+        position: absolute;
+        font-family: Arial, sans-serif;
+        font-size: 30px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+
+    @each $day,
+      $margin in (sun: 0, mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6)
+    {
+      &--start-day-#{$day} {
+        .calendar__day:nth-child(1) {
+          margin-left: calc(#{$margin} * (#{$day-size} + #{$gap-size}));
+        }
+      }
+    }
+
+    @for $day from 28 through 31 {
+      &--month-length-#{$day} {
+        .calendar__day:nth-child(n + #{$day + 1}) {
+          display: none;
+        }
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+    }
+  }
 }
