--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,7 +1,10 @@
 body {
-  display: flex;
+  cursor: pointer;
   justify-content: center;
   align-items: center;
   margin: 0;
-  cursor: pointer;
+  height: 100dvh;
+  display: flex;
+  font-size: 30px;
+  font-family: Arial, sans-serif;
 }
