--- a/src/styles/blocks/variables.scss
+++ b/src/styles/blocks/variables.scss
@@ -1,4 +1,4 @@
-$start-day: 606px;
+$start-day: 'sun';
 $month-length: 31;
 $block-margin: 101px;
 $week: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
