--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,3 @@
-@import 'blocks/variables';
-@import 'blocks/page';
-@import 'blocks/calendar';
+@use 'blocks/variables';
+@use 'blocks/page';
+@use 'blocks/calendar';
