--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
+  flex-direction: column;
+  display: flex;
+  justify-content: center; /* Вирівнює по горизонталі */
+  align-items: center; /* Вирівнює по вертикалі */
+  height: 100vh;
   margin: 0;
 }
+
+@import 'main';
