--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,80 @@
+$day-size: 100px;
+$calendar-width: ($day-size + 1px) * 7;
+$month-length: 28;
+$days: (
+  'mon': 5,
+  'tue': 101px,
+  'wed': 202px,
+  'thu': 303px,
+  'fri': 404px,
+  'sat': 505px,
+  'sun': 606px,
+);
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.calendar {
+  display: flex;
+  width: $calendar-width;
+  flex-wrap: wrap;
+  gap: 1px;
+}
+
+.calendar__day {
+  position: relative;
+  height: $day-size;
+  width: $day-size;
+  background-color: #eee;
+  border: 1px solid #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@for $day from 1 through $month-length {
+  .calendar__day:nth-of-type(#{$day})::before {
+    content: '#{$day}';
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+  }
+}
+
+.calendar__day:hover {
+  cursor: pointer;
+  background-color: #ffbfcb;
+  transform: translateY(-20px);
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+}
+
+@each $name, $margin in $days {
+  .calendar--start-day-#{$name} {
+    .calendar__day:first-child {
+      margin-left: $margin;
+    }
+  }
+}
+
+@for $day from $month-length through 31 {
+  .calendar__day:nth-child(n + #{$day + 1}) {
+    display: none;
+  }
+}
+
+// @for $day from $month-length through 31 {
+//   .calendar--month-length-#{$day} {
+//     .calendar__day:nth-child(n + #{$day + 1}) {
+//       display: none;
+//     }
+//   }
+// }
