--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,15 @@
 body {
   margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+@import 'main';
+@import 'variable';
