--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,5 @@
 $day-size: 100px;
 $calendar-width: ($day-size + 1px) * 7;
-$month-length: 28;
 $days: (
   'mon': 5,
   'tue': 101px,
@@ -39,13 +38,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
 }
 
-@for $day from 1 through $month-length {
+@for $day from 1 through 31 {
   .calendar__day:nth-of-type(#{$day})::before {
     content: '#{$day}';
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
   }
 }
 
@@ -65,16 +64,8 @@ body {
   }
 }
 
-@for $day from $month-length through 31 {
-  .calendar__day:nth-child(n + #{$day + 1}) {
+@for $i from 28 through 31 {
+  .calendar--month-length-#{$i} :nth-child(n + #{$i + 1}) {
     display: none;
   }
 }
-
-// @for $day from $month-length through 31 {
-//   .calendar--month-length-#{$day} {
-//     .calendar__day:nth-child(n + #{$day + 1}) {
-//       display: none;
-//     }
-//   }
-// }
