--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,5 +11,5 @@ body {
   box-sizing: border-box;
 }
 
-@import 'main';
-@import 'variable';
+@import '/src/styles/main.scss';
+@import '/src/styles/variable.scss';
