--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,27 @@
-body {
-  margin: 0;
+
+  body {
+      margin: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+
+
+.calendar__day{
+  background-color: #eee;
+  height: 100px;
+  width: 100px;
+  column-count: 7;
+  column-gap: 1px;
+  border: 1px solid #000;
+  box-sizing: border-box;
+}
+
+@for $calendar__day from 1 through 31 {
+  ul:nth-child(31n + #{$calendar__day}){
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    color: black;
+  }
 }
