--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,45 +9,56 @@ $day-bg: #eee;
 $hover-bg: #ffbfcb;
 $font-size: 30px;
 $font-color: #000;
+$days: (
+  sun: 0,
+  mon: 1,
+  tue: 2,
+  wed: 3,
+  thu: 4,
+  fri: 5,
+  sat: 6,
+);
 
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: calc((#{$day-size} + #{$day-gap} * 2) * 7);
-  border: $border-size solid #000 ;
-  padding: 10px;
+  width: 706px;
   margin: auto;
+  padding: 10px;
+  gap: 1px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 
-  @each $day, $offset in (sun: 0, mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6) {
-    &--start-#{$day} .calendar__day:first-child {
+  @each $day,
+    $offset in (sun: 0, mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6)
+  {
+    &--start-day-#{$day} .calendar__day:first-child {
       margin-left: calc((6 - #{$offset}) * (#{$day-size} + #{$day-gap}));
     }
   }
-  
 
   @for $i from 28 through 31 {
-    &--month-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
+    &--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
       display: none;
     }
   }
 
   &__day {
+    cursor: pointer;
+    color: $font-color;
+    box-sizing: border-box;
+    background-color: $day-bg;
     width: $day-size;
     height: $day-size;
-    background-color: $day-bg;
     border: solid $border-size #000;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    cursor: pointer;
     font-family: Arial, sans-serif;
     font-size: $font-size;
-    color: $font-color;
     transition:
       background-color 0.5s,
       transform 0.5s;
