add task solution

--- a/src/styles/animation.scss
+++ b/src/styles/animation.scss
@@ -1,4 +1,4 @@
-@import './index.scss';
+@import './variables.scss';
 
 .calendar__day {
   transition: transform $transition-duration, background-color $transition-duration;
