--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,10 +1,9 @@
-@import './index.scss';
-
 $font-family: Arial, sans-serif;
 $primary-color: #000;
 $hover-color: #FFBFCB;
 $transition-duration: 0.5s;
-
 $star-size: 20px;
 $day-size: 100px;
 $gap-size: 1px;
+$card-width: 300px;
+
