--- a/src/styles/day.scss
+++ b/src/styles/day.scss
@@ -1,4 +1,4 @@
-@import './index.scss';
+@import './variables.scss';
 
 .calendar__day {
   width: $day-size;
@@ -11,18 +11,22 @@
   font-family: $font-family;
   position: relative;
 
-  // Показ числа
   &::before {
     content: attr(data-day);
     font-size: 30px;
     color: $primary-color;
   }
 
-  // Ховер ефекти
   &:hover {
     cursor: pointer;
     background-color: $hover-color;
     transform: translateY(-20px);
     transition: all $transition-duration ease-in-out;
   }
+
+  &.active {
+    color: $primary-color;
+    font-weight: bold;
+}
+
 }
