--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -35,36 +35,44 @@ body {
   }
 
   @for $number from 1 through 31 {
-    & :nth-child(#{$number})::before {
+    &:nth-child(#{$number})::before {
       content: '#{$number}';
       font-family: Arial, Helvetica, sans-serif;
       font-size: 30px;
     }
   }
 
-  $days: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
+  $days: (
+    'mon' 0,
+    'tue' 1,
+    'wed' 2,
+    'thu' 3,
+    'fri' 4,
+    'sat' 5,
+    'sun' 6
+  );
 
-  @each $day, $dayCount in $days {
-    &--start-day-#{$day} :first-child {
-      margin-left: 101px * $dayCount;
-    }
+@each $day, $dayCount in $days {
+  &--start-day-#{$day}:first-child {
+    margin-left: 101px * $dayCount;
+  }
+}
+
+@for $number from 28 through 31 {
+  &--month-length-#{$number}:nth-child(n + #{$number + 1}) {
+    display: none;
+  }
+}
+
+@keyframes move {
+  from {
+    background-color: #eee;
+    transform: translate(0);
   }
 
-  @for $number from 28 through 31 {
-    &--month-length-#{$number} :nth-child(n + #{$number + 1}) {
-      display: none;
-    }
+  to {
+    background-color: #ffbfcb;
+    transform: translate(0, -20px);
   }
-
-  @keyframes move {
-    from {
-      background-color: #eee;
-      transform: translate(0);
-    }
-
-    to {
-      background-color: #ffbfcb;
-      transform: translate(0, -20px);
-    }
-  }
+}
 }
