--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -37,22 +37,24 @@ body {
   cursor: pointer;
   background-color: #ffbfcb;
   transform: translateY(-20px);
-  transition: transform 0.5s, background-color 0.5s;
+  transition:
+    transform 0.5s,
+    background-color 0.5s;
 }
 
-.calendar--month-length-28 .calendar__day:nth-child(n+29) {
+.calendar--month-length-28 .calendar__day:nth-child(n + 29) {
   display: none;
 }
 
-.calendar--month-length-29 .calendar__day:nth-child(n+30) {
+.calendar--month-length-29 .calendar__day:nth-child(n + 30) {
   display: none;
 }
 
-.calendar--month-length-30 .calendar__day:nth-child(n+31) {
+.calendar--month-length-30 .calendar__day:nth-child(n + 31) {
   display: none;
 }
 
-.calendar--month-length-31 .calendar__day:nth-child(n+32) {
+.calendar--month-length-31 .calendar__day:nth-child(n + 32) {
   display: none;
 }
 
