--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,54 @@
+@use 'sass:list';
+
+$day-margin: 101px;
+$days: ('mon', 'tue', 'wed', 'thu', 'fri', 'sat', 'sun');
+
 body {
   margin: 0;
+}
+
+.Calendar {
+  display: flex;
+  gap: 1px;
+  padding: 10px;
+  flex-flow: row wrap;
+  width: 706px;
+  &__day {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 100px;
+    background-color: #eee;
+    border: 1px solid black;
+    font-size: 30px;
+    transition: 0.5s;
+  }
+
+  &__day:hover {
+    background-color: #ffbfcb;
+    cursor: pointer;
+    transform: translateY(-20px);
+  }
+}
+
+@for $i from 1 through 31 {
+  .Calendar__day--#{$i}::before {
+    content: '#{$i}';
+  }
+}
+
+@each $day in $days {
+  .Calendar__start-day--#{$day} > :first-child {
+    $index: list.index($days, $day);
+
+    margin-left: $day-margin * ($index - 1);
+  }
+}
+
+@for $i from 28 through 31 {
+  .Calendar__month-length--#{$i} > :nth-child(n + #{$i + 1}) {
+    visibility: hidden;
+  }
 }
