--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,50 @@
 body {
   margin: 0;
 }
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  width: calc($cell-size * 7 + $gap * 6);
+  gap: $gap;
+  padding: 10px;
+
+  &__day {
+    width: $cell-size;
+    height: $cell-size;
+    border: 1px black solid;
+    box-sizing: border-box;
+    background-color: #eee;
+    transition: 0.5s;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 30px;
+  }
+
+  @for $day from 1 through 31 {
+    &__day:nth-child(#{$day})::before {
+      content: '#{$day}';
+    }
+  }
+
+  @for $length from 28 through 31 {
+    &--month-length-#{$length} > :nth-child(n + #{$length + 1}) {
+      display: none;
+    }
+  }
+
+  @each $name, $day in $days {
+    &--start-day-#{$name} > :first-child {
+      margin-left: calc((100px + 1px) * #{$day});
+    }
+  }
+
+  &__day:hover {
+    background-color: #ffbfcb;
+    cursor: pointer;
+    transform: translate(0, -20px);
+  }
+}
