--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,63 @@
 body {
   margin: 0;
 }
+@import 'main';
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: calc(7 * 100px + 6 * 1px + 2 * 10px);
+  padding: 10px;
+  margin: auto;
+  border: 1px solid black;
+  box-sizing: border-box;
+
+  &__day {
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+    background-color: #eee;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+    transition: transform 0.5s, background-color 0.5s;
+
+    &:hover {
+      background-color: #FFBFCB;
+      transform: translateY(-20px);
+    }
+
+    &::before {
+      content: counter(day);
+      counter-increment: day;
+      font-family: Arial, sans-serif;
+      font-size: 30px;
+    }
+  }
+
+  @for $i from 1 through 31 {
+    &__day:nth-child(#{$i})::before {
+      content: "#{$i}";
+    }
+  }
+
+  @each $day in mon, tue, wed, thu, fri, sat, sun {
+    &--start-day-#{$day} {
+      &__day:first-child {
+        margin-left: #{index(mon tue wed thu fri sat sun, $day) * (100px + 1px)};
+      }
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} {
+      &__day:nth-child(n + #{$i + 1}) {
+        display: none;
+      }
+    }
+  }
+}
