--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,78 @@
+$square_size: 100px;
+$number-size: 30px;
+$gap: 1px;
+$days: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
+$month-length: 31;
+
+* {
+  // margin: 0;
+  // padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  display: flex;
+  max-width: 726px;
+  flex-wrap: wrap;
+  gap: 1px;
+  padding-inline: 10px;
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: #eee;
+    width: $square_size;
+    height: $square_size;
+    border: 1px solid black;
+    cursor: pointer;
+    transition-duration: 0.5s;
+
+    &:hover {
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+    }
+
+    @for $number-of-day from 1 through $month-length {
+      &:nth-child(#{$number-of-day})::before {
+        content: '#{$number-of-day}';
+        font-size: $number-size;
+      }
+    }
+  }
+}
+
+@each $day, $i in $days {
+  .calendar--start-day-#{$day} {
+    .calendar__day:first-child {
+      margin-left: ($square_size + $gap) * $i;
+    }
+  }
+}
+
+@for $day from 28 through 31 {
+  .calendar--month-length-#{$day} {
+    .calendar__day:nth-child(n + #{$day + 1}) {
+      display: none;
+    }
+  }
 }
