add task solution

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -54,9 +54,7 @@ body {
 }
 
 @each $name, $value in $daysOfWeek {
-  @if $startDay == $name {
-    .calendar--start-day-sun .calendar__day:first-child {
-      margin-left: ($value * ($daySize + $gapValue)) - ($daySize + $gapValue);
-    }
+  .calendar--start-day-#{$name} .calendar__day:first-child {
+    margin-left: ($value * ($daySize + $gapValue)) - ($daySize + $gapValue);
   }
 }
