--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,12 +1,12 @@
+// Переменные
 $day-size: 100px;
-$border-color: #000;
-$border-width: 1px;
-$day-gap: 1px;
-$font-size: 30px;
-$hover-color: #ffbfcb;
-$animation-duration: 0.5s;
-$column-width: $day-size + $day-gap;
+$gap-size: 1px;
+$bg-color: #eee;
+$hover-color: #FFBFCB;
+$days: ('sun' 0, 'mon' 1, 'tue' 2, 'wed' 3, 'thu' 4, 'fri' 5, 'sat' 6);
+$month-lengths: (28, 29, 30, 31);
 
+// Стили для body
 body {
   margin: 0;
   height: 100vh;
@@ -15,52 +15,60 @@ body {
   align-items: center;
 }
 
+// Календарь
 .calendar {
-  display: flex;
-  flex-wrap: wrap;
-  gap: $day-gap;
-  width: calc(#{$day-size * 7} + #{$day-gap * 6});
-  position: relative;
+  display: grid;
+  grid-template-columns: repeat(7, $day-size);
+  gap: $gap-size;
+  padding: 10px;
 
   &__day {
-    box-sizing: border-box;
     width: $day-size;
     height: $day-size;
-    border: $border-width solid $border-color;
-    background-color: #eee;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    background-color: $bg-color;
+    border: 1px solid black;
     position: relative;
-    font-family: Arial, sans-serif;
-    font-size: $font-size;
+    transition: all 0.5s ease;
 
     &::before {
-      content: attr(data-day);
+      content: '';
       position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-family: Arial, sans-serif;
+      font-size: 30px;
     }
 
     &:hover {
-      cursor: pointer;
       background-color: $hover-color;
       transform: translateY(-20px);
-      transition:
-        transform $animation-duration,
-        background-color $animation-duration;
+      cursor: pointer;
     }
   }
 
-  @for $i from 28 through 31 {
-    &--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
-      display: none;
+  // Генерация номеров дней через @for
+  @for $i from 1 through 31 {
+    &__day:nth-child(#{$i})::before {
+      content: "#{$i}";
     }
   }
 
-  @each $day,
-    $offset in (mon: 0, tue: 1, wed: 2, thu: 3, fri: 4, sat: 5, sun: 6)
-  {
-    &--start-day-#{$day} > .calendar__day:nth-child(1) {
-      margin-left: calc($offset * $column-width);
+  // Модификаторы для длины месяца
+  @each $length in $month-lengths {
+    &--month-length-#{$length} {
+      .calendar__day:nth-child(n + #{$length + 1}) {
+        display: none;
+      }
+    }
+  }
+
+  // Модификаторы для начального дня недели
+  @each $day, $dayCount in $days {
+    &--start-day-#{$day} {
+      .calendar__day:nth-child(1) {
+        margin-left: calc($dayCount * (#{$day-size} + $gap-size));
+      }
     }
   }
 }
