--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,72 @@
+$box-size: 100px;
+$gap: 1px;
+$week-day: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+  padding: 0 10px;
+  max-width: 726px;
+
+  &__day {
+    position: relative;
+    background-color: #eee;
+    height: $box_size;
+    width: $box_size;
+    border: 1px solid #000;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+
+    &:hover {
+      cursor: pointer;
+      transform: translateY(-20px);
+      transition-duration: 500ms;
+      background-color: #ffbfcb;
+    }
+  }
+}
+
+@for $box from 1 through 31 {
+  .calendar__day:nth-child(#{$box})::before {
+    content: '#{$box}';
+    position: absolute;
+    color: #000;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+}
+
+@each $day, $i in $week-day {
+  .calendar--start-day-#{$day} {
+    .calendar__day:first-child {
+      margin-left: ($box-size + $gap) * $i;
+    }
+  }
+}
+
+@for $end from 28 through 31 {
+  .calendar--month-length-#{$end} {
+    .calendar__day:nth-child(n + #{$end + 1}) {
+      display: none;
+    }
+  }
 }
