--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,74 @@
+$day-size: 100px;
+$day-border: 1px;
+$day-color: #eee;
+$day-color-hover: #ffbfcb;
+$day-font: Arial, sans-serif;
+$day-font-size: 30px;
+$gap: 1px;
+$columns: 7;
+$columns-size: $day-size + $day-border * 2;
+$max-width: $columns * $day-size + (($columns - 1) * $gap);
+
 body {
   margin: 0;
+}
+
+.calendar {
+  margin: 0 auto;
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+  max-width: $max-width;
+
+  .calendar__day {
+    width: $day-size;
+    height: $day-size;
+    border: solid $day-border black;
+    background-color: $day-color;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    font-family: $day-font;
+    font-size: $day-font-size;
+    box-sizing: border-box;
+    cursor: pointer;
+    transition: linear 0.5s;
+
+    &:first-child {
+      margin-left: 606px;
+    }
+
+    &::before {
+      content: counter(day);
+      counter-increment: day;
+      position: absolute;
+    }
+
+    &:hover {
+      background-color: $day-color-hover;
+      transform: translateY(-20px);
+    }
+  }
+
+  @each $day, $margin in (mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6) {
+    &.calendar--start-day-#{$day} {
+      .calendar__day:first-child {
+        margin-left: calc(
+          (#{$day-size} + #{$day-border} * 2 + #{$gap}) * (#{$margin - 1})
+        );
+      }
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &.calendar--month-length-#{$i} {
+      .calendar__day:nth-child(n + #{$i + 1}) {
+        display: none;
+      }
+    }
+  }
+
+  counter-reset: day 0;
 }
