--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -37,7 +37,7 @@ body {
     transition: linear 0.5s;
 
     &:first-child {
-      margin-left: 606px;
+      margin-left: $day-size * 6 + (($columns - 1) * $gap);
     }
 
     &::before {
