--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,10 @@ $max-width: $columns * $day-size + (($columns - 1) * $gap);
 
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .calendar {
