--- a/css/main.css
+++ b/css/main.css
@@ -44,8 +44,8 @@ body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   cursor: pointer;
-  -webkit-transition: linear 0.5s;
-  transition: linear 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 .calendar .calendar__day:first-child {
   margin-left: 606px;
@@ -62,22 +62,22 @@ body {
           transform: translateY(-20px);
 }
 .calendar.calendar--start-day-mon .calendar__day:first-child {
-  margin-left: calc((100px + 1px * 2 + 1px) * (0));
+  margin-left: calc((100px + 1px) * (0));
 }
 .calendar.calendar--start-day-tue .calendar__day:first-child {
-  margin-left: calc((100px + 1px * 2 + 1px) * (1));
+  margin-left: calc((100px + 1px) * (1));
 }
 .calendar.calendar--start-day-wed .calendar__day:first-child {
-  margin-left: calc((100px + 1px * 2 + 1px) * (2));
+  margin-left: calc((100px + 1px) * (2));
 }
 .calendar.calendar--start-day-thu .calendar__day:first-child {
-  margin-left: calc((100px + 1px * 2 + 1px) * (3));
+  margin-left: calc((100px + 1px) * (3));
 }
 .calendar.calendar--start-day-fri .calendar__day:first-child {
-  margin-left: calc((100px + 1px * 2 + 1px) * (4));
+  margin-left: calc((100px + 1px) * (4));
 }
 .calendar.calendar--start-day-sat .calendar__day:first-child {
-  margin-left: calc((100px + 1px * 2 + 1px) * (5));
+  margin-left: calc((100px + 1px) * (5));
 }
 .calendar.calendar--month-length-28 .calendar__day:nth-child(n+29) {
   display: none;
