--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,7 +38,7 @@ body {
     font-size: $day-font-size;
     box-sizing: border-box;
     cursor: pointer;
-    transition: linear 0.5s;
+    transition: 0.5s;
 
     &:first-child {
       margin-left: $day-size * 6 + (($columns - 1) * $gap);
@@ -59,9 +59,7 @@ body {
   @each $day, $margin in (mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6) {
     &.calendar--start-day-#{$day} {
       .calendar__day:first-child {
-        margin-left: calc(
-          (#{$day-size} + #{$day-border} * 2 + #{$gap}) * (#{$margin - 1})
-        );
+        margin-left: calc((#{$day-size} + #{$gap}) * (#{$margin - 1}));
       }
     }
   }
