--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,18 +7,17 @@ body {
 }
 
 .calendar {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(7, 100px);
   gap: 1px;
   padding: 10px;
-  width: 727px;
-  box-sizing: border-box;
+  width: 706px;
 }
 .calendar__day {
   width: 100px;
   height: 100px;
   background-color: #eee;
-  border: 1px solid black;
+  border: 1px solid #000;
   position: relative;
   transition: transform 0.5s ease, background-color 0.5s ease;
 }
@@ -33,7 +32,7 @@ body {
 }
 .calendar__day:hover {
   background-color: #FFBFCB;
-  transform: translateY(-20px);
+  transform: translateY(-10px);
   cursor: pointer;
 }
 .calendar__day:nth-child(1)::before {
@@ -141,24 +140,24 @@ body {
 .calendar--month-length-31 .calendar__day:nth-child(n+32) {
   display: none;
 }
-.calendar--start-day-sun .calendar__day:first-child {
-  margin-left: calc(0 * 101px);
-}
-.calendar--start-day-mon .calendar__day:first-child {
+.calendar--start-day-mon .calendar__day:nth-child(1) {
   margin-left: calc(1 * 101px);
 }
-.calendar--start-day-tue .calendar__day:first-child {
+.calendar--start-day-tue .calendar__day:nth-child(1) {
   margin-left: calc(2 * 101px);
 }
-.calendar--start-day-wed .calendar__day:first-child {
+.calendar--start-day-wed .calendar__day:nth-child(1) {
   margin-left: calc(3 * 101px);
 }
-.calendar--start-day-thu .calendar__day:first-child {
+.calendar--start-day-thu .calendar__day:nth-child(1) {
   margin-left: calc(4 * 101px);
 }
-.calendar--start-day-fri .calendar__day:first-child {
+.calendar--start-day-fri .calendar__day:nth-child(1) {
   margin-left: calc(5 * 101px);
 }
-.calendar--start-day-sat .calendar__day:first-child {
+.calendar--start-day-sat .calendar__day:nth-child(1) {
   margin-left: calc(6 * 101px);
+}
+.calendar--start-day-sun .calendar__day:nth-child(1) {
+  margin-left: calc(0 * 101px);
 }/*# sourceMappingURL=main.css.map */
