--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -2,15 +2,14 @@ $col-count: 7;
 $gap: 1;
 $cell-width: 100;
 $cell-height: 100;
-/* stylelint-disable */
-$days-of-week:
-  'mon' 0,
-  'tue' 1,
-  'wed' 2,
-  'thu' 3,
-  'fri' 4,
-  'sat' 5,
-  'sun' 6;
-/* stylelint-enable */
+$days-of-week: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
 $month-length: 31;
 $current-day: 'sun';
