--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,6 +1,4 @@
 $width-square: 100px;
 $width-calendar: ($width-square * 7) + 10px;
-$start-day: 7;
-$margin-first-day: (($start-day - 1) * $width-square) + ($start-day - 1);
-$month-length: 29;
-$days-no: 31 - $month-length;
+$week-day: ('mon' 1, 'tue' 2, 'wed' 3, 'thu' 4, 'fri' 5, 'sat' 6, 'sun' 7);
+$month-length: 31;
